fix url app names

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     {{content-for 'head'}}
 
     <link rel="stylesheet" href="assets/vendor.css">
-    <link rel="stylesheet" href="assets/nf-graph-recipes.css">
+    <link rel="stylesheet" href="assets/ember-nf-graph-examples.css">
 
     {{content-for 'head-footer'}}
   </head>
@@ -18,7 +18,7 @@
     {{content-for 'body'}}
 
     <script src="assets/vendor.js"></script>
-    <script src="assets/nf-graph-recipes.js"></script>
+    <script src="assets/ember-nf-graph-examples.js"></script>
 
     {{content-for 'body-footer'}}
   </body>
